--- a/pallets/parachain-staking/Cargo.toml
+++ b/pallets/parachain-staking/Cargo.toml
@@ -17,10 +17,11 @@ parity-scale-codec = { version = "2.2", default-features = false, features = [ "
 scale-info = { version = "1.0", default-features = false, features = [ "derive" ] }
 sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
 sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false }
+sp-staking = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false}
 substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false }
+pallet-authorship = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false}
+pallet-session = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", default-features = false}
 
-# Nimbus
-nimbus-primitives = { git = "https://github.com/bifrost-finance/nimbus", branch = "bifrost-polkadot-v0.9.13", default-features = false }
 
 [dev-dependencies]
 similar-asserts = "1.1.0"
@@ -35,12 +36,14 @@ std = [
 	"frame-benchmarking/std",
 	"frame-support/std",
 	"frame-system/std",
-	"nimbus-primitives/std",
 	"parity-scale-codec/std",
 	"scale-info/std",
 	"serde",
 	"sp-runtime/std",
 	"sp-std/std",
+	"sp-staking/std",
+	"pallet-authorship/std",
+	"pallet-session/std",
 ]
 runtime-benchmarks = [ "frame-benchmarking" ]
 try-runtime = [ "frame-support/try-runtime" ]
